# Vertex

./: .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js
.github/workflows/: deploy.yml
_app/: version.json
_app/immutable/assets/: 0.BSf2PKNB.css  0.BXjc4ZTB.css  0.Bydtvq74.css  0.D1Uci50A.css  0.DDRQBQl2.css  0.DFoz24h2.css  0.DMeWpCNL.css  0.DOBh13Zb.css  0.Dbd1TiXH.css  0.DdbK0stx.css
_app/immutable/chunks/: -NK6cLUK.js  0qbuYa2a.js  173letUn.js  3B_-17Zd.js  3lslzhHx.js  4OgS6P2e.js  6UUrydYx.js  7ihF8y79.js  B-lGMHe_.js  B0KXtXfz.js  B1Ji6ZdA.js  B4Wa4CPl.js  B6U_pLqu.js  B7YrpQf7.js  B7aLb33K.js  B9b1bgOO.js  BCwFYrTs.js  BDsC6wfb.js  BJL47Q21.js  BM8C9jCG.js  BNH3RILn.js  BOmGpYIA.js  BQyLRSXK.js  BSe8FaA4.js  BX5A3g_k.js  BZ-GmmKO.js  BcfqlZqL.js  BgiUyCpH.js  Bhpopd0P.js  BjfWGTwd.js  Bk5ubF8h.js  BmMrBPpj.js  Bp0ZJddn.js  BsCGpVoo.js  BsO3N2J3.js  C0sbLBX2.js  C1s46fuo.js  C2aFzF2E.js  C5sHIQCI.js  CDi_vWUn.js  (+82 more)
_app/immutable/entry/: app.1z751JAc.js  app.2rEMYXEe.js  app.9WD0m62Z.js  app.B0NoLXsv.js  app.B9XRp2cU.js  app.BBZHY0PC.js  app.BF2jvPcV.js  app.BJgygc6f.js  app.BTa6cDjF.js  app.BU8x9iWb.js  app.BV3LJ5h7.js  app.BtbFRAIe.js  app.Bv3glywy.js  app.BvyFFkH_.js  app.C4qK79uI.js  app.CbRhx8zC.js  app.Cu2j_dof.js  app.Cu_2Ryh1.js  app.D3PQEVo1.js  app.DGGGXDGm.js  app.DMQncgg4.js  app.DOqg0Oq_.js  app.DSd94JcN.js  app.Deen6bFB.js  app.DrUZNxcq.js  (+39 more)
creating-a-window/: index.html
creating-a-window/input-processing/: index.html
example-project/: CMakeLists.txt  CMakePresets.json  vcpkg.json
example-project/source/: main.cpp
my-first-triangle/: index.html
my-first-triangle/transforming-triangle/: index.html
my-first-triangle/vectors-and-matrices/: index.html
setup/: index.html
setup/dear-imgui/: index.html
setup/linux/: index.html
src/: app.html
src/routes/: +layout.svelte  +page.md  layout.css
(+158 files in other folders)
